# 3D_MVP

./: 3D_MVP.cpp  3D_MVP.h  CMakeLists.txt
.claude/: CLAUDE.md
shader/: render.slang  render.spv  shader.slang  wave_simulation.slang  wave_simulation.spv
src/camera/: QWaveCamera.cpp  QWaveCamera.h
src/core/: QWaveEngine.cpp  QWaveEngine.h  QWaveRenderer.cpp  QWaveRenderer.h  QWaveWorld.cpp  QWaveWorld.h
src/utils/: GpuStructs.h
src/utils/interface/: QObject.h  QRenderObject.h
src/vulkan/VulkanCommandPool/: VulkanCommandPool.cpp  VulkanCommandPool.h
src/vulkan/VulkanDevice/: VulkanDevice.cpp  VulkanDevice.h
src/vulkan/VulkanInstance/: VulkanInstance.cpp  VulkanInstance.h
src/vulkan/VulkanPhysicalDevice/: VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.h
src/vulkan/VulkanSurface/: VulkanSurface.cpp  VulkanSurface.h
src/vulkan/VulkanSwapChain/: VulkanSwapChain.cpp  VulkanSwapChain.h
src/vulkan/buffer/: VulkanStorageBuffer.cpp  VulkanStorageBuffer.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h
src/worldobject/cube/: QWaveCube.cpp  QWaveCube.h
src/worldobject/light/: QWaveLight.cpp  QWaveLight.h
src/worldobject/plane/: QWavePlane.cpp  QWavePlane.h
